<resources>
    <string name="app_name">L3by</string>
    <string name="auth_register_failed">Couldn\'t create an account</string>
    <string name="games_you_own">Games you own</string>
    <string name="couldnot_fetch">Couldn\'t retrieve the data</string>
    <string name="games_you_want">Games you want</string>
    <string name="refresh">Refresh</string>
    <string name="clear_all">Clear all</string>
    <string name="has">Has</string>
    <string name="games_you_want_text">Games you want</string>
    <string name="want">Want</string>
    <string name="games_you_have">Games you\'ve</string>
    <string name="couldnot_find_location">Couldn\'t find location</string>
    <string name="couldnot_find_name">Couldn\'t find name</string>
    <string name="create_account">Create Account</string>
    <string name="tab_games">Games</string>
    <string name="tab_wishlists">Wishes</string>
    <string name="tab_trade">Trade</string>
    <string name="tab_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="collect">Collect</string>
    <string name="collect_your_daily_points">Collect your daily points</string>
    <string name="get_more_points">Get  more points</string>
    <string name="tab_rewards">Rewards</string>
    <string name="search">Search Games</string>
    <string name="congratulation_reward">Congratulation, you just have won</string>
    <string name="great">Great!</string>
    <string name="you_have_won">You\'ve just won</string>
    <string name="zero_gp">0 GP</string>
    <string name="game_points">GP</string>
    <string name="no_games_point">GP is required</string>
    <string name="no_wish_points">WP is required</string>
    <string name="added">Added</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="games">Games</string>
    <string name="clear_games">Clear My Games</string>
    <string name="clear_wishes">Clear My Wishes</string>
    <string name="name">Name</string>
    <string name="your_information_will_be_removed">Your games, and wishes will be removed</string>
    <string name="warning">Warning!</string>
    <string name="log_out">Log out</string>
    <string name="stay_logged">Stay Logged</string>
    <string name="click_to_edit">Click to Edit</string>
    <string name="country">Country</string>
    <string name="you_have">You\'ve</string>
    <string name="you_wishes">You want</string>
    <string name="wish_points">WP</string>
    <string name="cannot_find_mutual_trade">Cannot find mutual trades, add more wishes</string>
    <string name="add_location_to_trade">Add Location to Trade</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="email">Email</string>
    <string name="promo_code">Promo Code</string>
    <string name="register">Register</string>
    <string name="tips">Tips</string>
    <string name="tips_information">
         1. Choose a public, and crowded place to meet such as malls, metro stations
       \n 2. Go with a friend of yours, Never go alone.
   \n 3. L3by isn\'t responsible for the trade transaction, or traders
    \n Click to view the rest
    </string>
    <string name="games_owned">Owns 32 Games</string>
    <string name="games_wished">Wishes 12 Games</string>
    <string name="message">Message</string>
    <string name="trade_my_games">Trade X of your Games with Y of Ahmed\'s Games</string>
    <string name="games_you_are_willing_to_trade">You\'ll trade</string>
    <string name="with">with</string>
    <string name="owns">Owns</string>
    <string name="wants">Wants</string>
    <string name="wants_colon">Wants:</string>
    <string name="messages">Messages</string>
    <string name="hello_to_trading">Happy Trading! :)</string>
    <string name="sign_in">Sign In</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Retry</string>
    <string name="sign_out">Sign out</string>
    <string name="spin">Spin</string>
    <string name="trading">Trade Center</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="privacy_policy">Privacy Policy &amp;</string>
    <string name="terms_and_contitions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy_header">Privacy Policy</string>
    <string name="offline">Offline</string>
    <string name="notification_message">Message</string>
    <string name="online">Online</string>
    <string name="unavailable">Unavailable</string>
    <string name="collected_already">You\'ve collected your daily login</string>
    <string name="consecutive_days">Consecutive Days</string>
    <string name="congratulation">Congrats, login once a day to avoid losing your score record</string>
    <string name="load_more">Load More</string>
    <string name="contine_with_facebook">Continue With Facebook</string>
    <string name="settings">Settings</string>
    <string name="i_am_willing_to_trade">I am willing to trade</string>
    <string name="for_games_you_own">for those games you own</string>
    <string name="it_seems_you_have_tried_to_connect_before">It seems that you\'ve contacted him before</string>
    <string name="failed_please_retry">Failed to establish connecton, try again.</string>
    <string name="and">and</string>
    <string name="more_games">more games</string>
    <string name="couldnot_sign_in">Couldn\'t sign in</string>
    <string name="all_fields_are_requried">All fields are required</string>
    <string name="game_stock">Game stock</string>
    <string name="more_game">more game</string>
    <string name="game">game</string>
    <string name="ad_is_loaded">Ad is loaded</string>
    <string name="error_has_occured">Error has happened</string>
    <string name="failed_to_load_ad">Failed to load Ad</string>
    <string name="terms_and_contitions_and"><![CDATA[Terms & Conditions &]]></string>
    <string name="by_signing_up">By signing up, you agree to</string>
    <string name="empty_user_name">Empty Username</string>
    <string name="empty_email">Empty Email</string>
    <string name="password_cannot_have_space">Password cannot have space</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="password_must_be_above_eight">Password should be more than 8 letters</string>
    <string name="registered_successfully">Registered Successfully</string>
    <string name="cannot_find_ad">Can\'t find ad</string>
    <string name="loading_games_owned">Loading games you own</string>
    <string name="loading_games">Loading Games</string>
    <string name="loading_wishes">Loading Wishes</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="very_small_name">Small Name</string>
    <string name="large_name">Large Name</string>
    <string name="updated">Updated</string>
    <string name="new_message">New Message</string>
    <string name="how_to_trade_safetly">How to safetly trade?</string>
    <string name="safety_text_how_to_safetly_trade">
        Make sure to inform the trader of any defects in the item you are trading. \n
        Use only simple trade methods that you trust and are familiar with, i.e flash trade in cybers\n
        In any case, do not send copies of your documents, personal data and most importantly financial information\n
        Don’t deal with traders who keep on constantly changing the meeting place or calling from different mobile numbers.\n
        If you see the trader waiting for you in his car and he wants to check the item, ask him kindly to get out of the car to check it outside\n
        it is always better in a public place you have both chosen.\n
    Always meet the trader at a safe location such as Metro stations, shopping malls or any famous meeting point.\n
Don’t forget to inspect the item before trading. Following this one rule will help you avoid most scams.\n
Trust your guts and watch out for unrealistic offers. If it appears too good to be true, it probably is.\n
Don’t deal with traders who insist on asking for your personal information such as your full name, age, bank account etc.\n
Never send an advance partial or full payment, or use a debit card to pay someone you do not know before collecting your item\n
Remember, it is recommended to trade items directly from the trader.
    </string>
    <string name="safety_text_fake_data">Be careful if the trader\'s information seems fake, or the trade seems unrealistic. \n  Pay special attention to those details</string>
    <string name="safety_text_fake_data_title">Watch out from unrealistic, or fake data</string>
    <string name="safety_text_fraud_title">What should I do if I suspect someone to be fraudulent trader?</string>
    <string name="safety_text_fraud">Please contact us, using Report Issues if you suspect someone to be acting fraudulently on L3by. We also urge you to notify the local Police immediately if you have been a victim of fraud. We would gladly provide them with any information they might need upon their request. Don’t hesitate to send us a message filling the contact form so that we can block the account of the person after conducting the necessary investigation.</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="report_an_issue">Report an Issue</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="the_issue">The Issue</string>
    <string name="title_issue">Issue Title</string>
    <string name="confirm_report">Confirming report</string>
    <string name="issue_is_so_small">Issue is almost empty</string>
    <string name="safety_measures">Safety Measures</string>
    <string name="wait_for_the_code">Wait for the code</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="confirm">Confirm</string>
    <string name="enter_vaild_code">Enter a valid code</string>
    <string name="setting_your_account">Setting your account up</string>
    <string name="something_is_wrong">Somthing is wrong, we will fix it soon…</string>
    <string name="invalid_code">Invalid code entered…</string>
    <string name="dismiss">Dismiss</string>
    <string name="registered_failed">Registered Failed</string>
    <string name="registered_failed_try_again">Registered failed, try again</string>
    <string name="already_registered">Already Registered</string>
    <string name="wrong_phone_number">Wrong phone number</string>
    <string name="registered_failed_trying_again">Register Failed, Trying again</string>
    <string name="logged_in">Logged In</string>
    <string name="email_or_phone_no">Email or Phone Number</string>
    <string name="be_aware_from_virus">Be aware from virus</string>
    <string name="safety_be_aware_text">It\'s very recommended to scan any file  if you\'re going to transfer any data</string>
    <string name="referral">Referral</string>
    <string name="sending_sms_to_phone_number">We\'re sending you sms to your phone</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="my_games">My Games</string>
    <string name="my_wishes">My Wishes</string>
    <string name="home">Home</string>
    <string name="edit">Edit</string>
    <string name="phone_cannot_be_edited">Phone cannot be edited</string>
    <string name="update">Update</string>
    <string name="email_cannot_be_changed">Email cannot be edited</string>
    <string name="we_have_updated_the_application"><![CDATA[We\'ve changed the location system(City & District), therefore, It\'s highly recommended to re-view your location settings]]></string>
    <string name="go_to_settings">Go to Settings</string>
</resources>