<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.safetyRules.SaftyRulesActivity"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatImageView
            app:srcCompat="@drawable/ic_shield"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"/>

        <TextView
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/ID_safety_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_trade_safetly"
            android:gravity="center"
            android:layout_margin="4dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <TextView
            android:textColor="@color/black"
            android:id="@+id/ID_safety_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/safety_text_how_to_safetly_trade"/>

        <androidx.appcompat.widget.AppCompatImageView
            app:srcCompat="@drawable/ic_wanted"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/ID_safety_text_fake_data_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safety_text_fake_data_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/ID_safety_text_fake_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/safety_text_fake_data"/>


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            app:srcCompat="@drawable/ic_policeman" />


        <TextView
            android:id="@+id/ID_safety_text_fraud_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/safety_text_fraud_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="2dp"/>


        <TextView
            android:id="@+id/ID_safety_text_fraud_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/safety_text_fraud"
            android:layout_margin="4dp"/>


        <TextView
            android:id="@+id/ID_safety_text_spam_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:text="@string/be_aware_from_virus"/>

        <TextView
            android:id="@+id/ID_safety_text_spam_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/safety_be_aware_text"
            android:layout_margin="4dp"/>





    </LinearLayout>

</ScrollView>