<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ID_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/warning"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ID_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10sp"
        android:text="@string/we_have_updated_the_application"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        />


    <com.gamesexchange.gamesexchange.views.CustomButtonView
        android:id="@+id/ID_dialog_great_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:gravity="center"
        android:background="@color/blue1"
        android:padding="8dp"
        android:text="@string/go_to_settings"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

</LinearLayout>